public abstract class Cap implements Item{
    @Override
    public abstract float price();
}
