public class CapBlack extends Cap {
    @Override
    public float price() {
        return 65.0f;
    }

    @Override
    public String name() {
        return "Black cap";
    }

    @Override
    public String manufacturer() {
        return "Smart caps";
    }
}

