public class CapWhite extends Cap {
    @Override
    public float price() {
        return 75.0f;
    }

    @Override
    public String name() {
        return "White cap";
    }

    @Override
    public String manufacturer() {
        return "Smart caps";
    }
}


