public interface Item {
    String name();

    float price();

    String manufacturer();
}

