public abstract class Tshirt implements Item{
    @Override
    public abstract float price();
}
