public class TshirtBlue extends Tshirt {
    @Override
    public float price() {
        return 155.0f;
    }

    @Override
    public String name() {
        return "Blue t-shirt";
    }

    @Override
    public String manufacturer() {
        return "Active sports";
    }
}