public class TshirtRed extends Tshirt {
    @Override
    public float price() {
        return 135.0f;
    }

    @Override
    public String name() {
        return "Red t-shirt";
    }

    @Override
    public String manufacturer() {
        return "Active sports";
    }
}


